--- a/application/admin/view/import/first.html
+++ b/application/admin/view/import/first.html
@@ -50,7 +50,7 @@
                     <form id="uploadForm" enctype="multipart/form-data">
                         <div class="form-inline">
                             <label for="tname" class="col-lg-2 col-lg-offset-1 control-label">表单名</label>
-                            <input type="text" class="" id="tname">
+                            <input type="text" class="form-control" id="tname">
                             <input type="text" class="form-control file-input" name="fileBrowserInput" id="fileBrowserInput"
                                 readonly="readonly">
                             <input type="file" class="hidden" id="tempalteFile">
