--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -83,7 +83,7 @@
 
                         </div>
                         <table id="table" data-search="true"
-                            class="table table-striped table-hover table-bordered text-nowrap  table-condensed">
+                            class="table  table-hover text-nowrap  table-condensed">
                         </table>
                     </div>
                     <!-- {if $template.ifUseData==1}
