--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -15,7 +15,7 @@
                     <span class="widget-caption">选择添加方式</span>
                 </div>
                 <div class="widget-body">
-                    <p class="alert alert-danger">目前系统支持的最大字段数为25</p>
+                    <!-- <p class="alert alert-danger">目前系统支持的最大字段数为25</p> -->
                     <div class="form-group">
                         <a href="{:url('admin/Import/First')}" style="margin-right: 10px;">
                             <button class="btn btn-primary btn-lg">文件导入</button>
