--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -39,7 +39,7 @@
                             数据页
                         </a>
                     </li>
-                    <!-- {if $template.ifUseData==1}
+                    <!-- {if $template.myData!=null}
                     
                     <li>
                         <a href="#secondPage" data-toggle="tab">
@@ -86,11 +86,7 @@
                             class="table  table-hover text-nowrap  table-condensed">
                         </table>
                     </div>
-                    <!-- {if $template.ifUseData==1}
-                    <div class="tab-pane" id="secondPage">
-
-                    </div>
-                    {/if} -->
+                    
                 </div>
             </div>
         </div>
