--- a/application/admin/view/hand/index.html
+++ b/application/admin/view/hand/index.html
@@ -43,11 +43,11 @@
         }
     }
 
-    .a-radio {
+    .i-radio {
         display: none;
     }
 
-    .b-radio {
+    .s-radio {
         display: inline-block;
         border: 1px solid #ccc;
         width: 16px;
@@ -58,7 +58,7 @@
         position: relative;
     }
 
-    .b-radio:before {
+    .s-radio:before {
         content: '';
         font-size: 0;
         width: 10px;
@@ -73,7 +73,7 @@
         display: none;
     }
 
-    .a-radio:checked~.b-radio:before {
+    .i-radio:checked~.s-radio:before {
         display: block;
     }
 
@@ -158,7 +158,7 @@
                     </div>
 
                     <div class="col-lg-3">
-                        <div class="panel panel-default" style="margin-top: 60px;">
+                        <!-- <div class="panel panel-default" style="margin-top: 60px;">
                             <div class="panel-body">
                                 <h5>请选择唯一标识字段</h5>
                                 <select class="select" name="primaryKey" id="primaryKey">
@@ -166,13 +166,13 @@
                                 <div class="useData">
                                     <h5>是否使用自定义数据集</h5>
                                     <label>
-                                        <input type="radio" name="ifUseData" class="a-radio" value="1">
-                                        <span class="b-radio"></span>使用
+                                        <input type="radio" name="ifUseData" class="i-radio" value="1">
+                                        <span class="s-radio"></span>使用
                                     </label>
 
                                     <label>
-                                        <input type="radio" name="ifUseData" class="a-radio" value="0" checked>
-                                        <span class="b-radio"></span>不使用
+                                        <input type="radio" name="ifUseData" class="i-radio" value="0" checked>
+                                        <span class="s-radio"></span>不使用
                                     </label>
                                 </div>
                                 <div class="hidden myData">
@@ -191,7 +191,62 @@
                                     style="margin-top:20px;"><span class="fa fa-table"></span>
                                     初始化表单</button>
                             </div>
-                        </div>
+                        </div> -->
+                        <form class="form-box">
+                            <div class="well">
+                                <div>
+                                    <h4><font color="red"
+                                        style="position:relative; top:5px;font-weight:bold;font-size:16px">*</font>是否指定唯一标识字段</h4>
+                                    <label>
+                                        <input type="radio" name="ifUseKey" class="key-radio i-radio" value="1">
+                                        <span class="s-radio"></span>指定
+                                    </label>
+        
+                                    <label>
+                                        <input type="radio" name="ifUseKey" class="key-radio i-radio" value="0" checked>
+                                        <span class="s-radio"></span>不指定
+                                    </label>
+                                </div>
+                                <div class="hidden myKey">
+                                    <h5>请选择唯一标识字段</h5>
+                                    <select class="select" name="primaryKey" id="primaryKey">
+                                        {volist name="optionList" id='option'}
+                                        <option value="{$key}">{$option.title}</option>
+                                        {/volist}
+                                    </select>
+                                </div>
+                            </div>
+                            
+                            <div class="well mydata-box hidden">
+                                <div>
+                                    <h4><font color="red"
+                                        style="position:relative; top:5px;font-weight:bold;font-size:16px">*</font>是否使用自定义数据集</h4>
+                                    <label>
+                                        <input type="radio" name="ifUseData" class="data-radio i-radio" value="1">
+                                        <span class="s-radio"></span>使用
+                                    </label>
+        
+                                    <label>
+                                        <input type="radio" name="ifUseData" class="data-radio i-radio" value="0" checked>
+                                        <span class="s-radio"></span>不使用
+                                    </label>
+                                </div>
+                                <div class="hidden myData">
+                                    <h5>请选择数据集</h5>
+                                    {neq name="Think.session.myData|count" value="0"}
+                                    <select class="select" name="primaryKeyData" id="primaryKeyData" style="margin-bottom: 10px;">
+                                        {volist name="Think.session.myData" id="vo"}
+                                        <option value="{$vo.id}">{$vo.title}</option>
+                                        {/volist}
+                                    </select>
+                                    {else /}
+                                    <p class="alert alert-warning">您还没有数据集，请新建数据集</p>
+                                    {/neq}
+                                </div>
+                            </div>
+                        </form>
+                        <button class="btn btn-success initTemplate" type="button"><span class="fa fa-table"></span>
+                            初始化表单</button>
                     </div>
                 </div>
             </div>
@@ -207,7 +262,18 @@
 
 <script>
     $(function () {
-        $(".a-radio").click(function () {
+        $(".key-radio").click(function () {
+            var value = $(this).val();
+            if (value === "1") {
+                $(".myKey").removeClass("hidden").addClass("show")
+                $(".mydata-box").removeClass("hidden").addClass("show")
+            } else {
+                $(".form-box")[0].reset();
+                $(".myKey").removeClass("show").addClass("hidden")
+                $(".mydata-box").removeClass("show").addClass("hidden")
+            }
+        })
+         $(".data-radio").click(function () {
             var value = $(this).val();
             if (value === "1") {
                 $(".myData").removeClass("hidden").addClass("show")
@@ -221,12 +287,16 @@
         $("#subForm").validate(
             {
                 submitHandler: function (form) {
-                    var myData = $("#primaryKeyData").val();
                     var ifUseData = $("input[name='ifUseData']:checked").val();
+                    var ifUseKey = $("input[name='ifUseKey']:checked").val();
+                    var myData = $("#primaryKeyData").val();
                     var primaryKey = $("#primaryKey").val();
-                    var data = $('form').serialize() + '&' + $.param({ 'ifUseData': ifUseData, 'primaryKey': primaryKey })
+                    var data = $('#subForm').serialize()
                     if (ifUseData == "1") {
                         data = data + '&' + $.param({ 'myData': myData, })
+                    }
+                    if (ifUseKey == "1") {
+                        data = data + '&' + $.param({ 'primaryKey': primaryKey, })
                     }
 
                     $.ajax({
