--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -31,7 +31,7 @@
                             <tr>
                                 <td><a href="{:url('admin/Template/index',['id'=>$vo.tid])}"
                                         style="font-size:14px">{$vo.tname}</a> </td>
-                                {if session('admin.is_super')==1}<td>{$vo.user}</td>{/if}
+                                {if session('admin.is_super')==1}<td>{$vo.getuser.username}</td>{/if}
                                 <td>{$vo.count}</td>
                                 {if $vo.status==1}
                                 <td>
@@ -66,6 +66,7 @@
                                             class="fa fa-eye"></span>表单</a>
                                 </td>
                                 <td>{$vo.create_time|date='Y年m月d日 H:i'}</td>
+                                
                             </tr>
                             {/volist}
 
