--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta itemprop="name" content="{$tname}">
+    <meta name="description" itemprop="description" content="{$tname}">
+    <meta name="author" content="Li Jian">
     <link rel="shortcut icon" type="IMG/x-icon" href="/favicon.ico" />
     <title>{$tname}</title>
     <!-- Bootstrap core CSS -->
@@ -80,11 +80,12 @@
                                 </font>{$k}.{$vo.title}
                             </label>
                             <div class="col-lg-10">
-                                <input type="text" class="form-control required {$vo.rule}" style="height: 40px;" id="{$key}" name="{$key}">
+                                <input type="text" class="form-control required {$vo.rule}" style="height: 40px;"
+                                    id="{$key}" name="{$key}">
                             </div>
                         </div>
                         {else /}
-                        {lt name="$vo.options|count" value="4"}
+                        {lt name="$vo.options|count" value="7"}
                         <div class="form-group">
                             <label style="font-size: 16px;" for="{$key}" class="col-lg-10">
                                 <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*
@@ -93,10 +94,8 @@
                             <div class="col-lg-10">
                                 <ul class="list-group">
                                     {foreach name="vo.options" item="voo" key="kk"}
-                                    <label style="width:100%;">
-                                        <li class="list-group-item">
-                                            <input type="radio" name="{$key}" value="{$voo}"> {$voo}
-                                        </li>
+                                    <label style="width:100%;"  class="list-group-item">
+                                        <input type="radio" name="{$key}" value="{$voo}"> {$voo}
                                     </label>
                                     {/foreach}
                                 </ul>
