--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                         {else /}
-                        {lt name="$vo.options|count" value="7"}
+                        {elt name="$vo.options|count" value="4"}
                         <div class="form-group">
                             <label style="font-size: 16px;" for="{$key}" class="col-lg-10">
                                 <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*
@@ -116,7 +116,7 @@
                                 </select>
                             </div>
                         </div>
-                        {/lt}
+                        {/elt}
                         {/eq}
                         {/volist}
                         <div class="form-group">
