--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -65,65 +65,63 @@
     <div class="container" style="margin-top: 50px;margin-bottom: 50px;">
         <div class="row col-lg-offset-2">
             <div class="col-lg-8 project-block-background">
-                {present name="$hello"}
-                <h1>{$hello}</h1>
+                {present name="$info"}
+                <h1>{$info}</h1>
                 {else /}
                 <form class="form-horizontal" role="form" id="subForm" autocomplete="off">
-                    <fieldset>
-                        <legend style="text-align: center;font-size:28px;">{$tname}</legend>
-                        <!-- 输出input -->
-                        {volist name="optionList" id="vo" key="k"}
-                        {eq name="$vo.options|count" value="0"}
-                        <div class="form-group">
-                            <label style="font-size: 16px;" for="{$key}" class="col-lg-10">
-                                <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*
-                                </font>{$k}.{$vo.title}
-                            </label>
-                            <div class="col-lg-10">
-                                <input type="text" class="form-control required {$vo.rule}" style="height: 40px;"
-                                    id="{$key}" name="{$key}">
-                            </div>
+                    <legend style="text-align: center;font-size:28px;">{$tname}</legend>
+                    <!-- 输出input -->
+                    {volist name="optionList" id="vo" key="k"}
+                    {eq name="$vo.options|count" value="0"}
+                    <div class="form-group">
+                        <label style="font-size: 16px;" for="{$key}" class="col-lg-10">
+                            <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*
+                            </font>{$k}.{$vo.title}
+                        </label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control required {$vo.rule}" style="height: 40px;"
+                                id="{$key}" name="{$key}">
                         </div>
-                        {else /}
-                        {elt name="$vo.options|count" value="4"}
-                        <div class="form-group">
-                            <label style="font-size: 16px;" for="{$key}" class="col-lg-10">
-                                <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*
-                                </font>{$k}.{$vo.title}
-                            </label>
-                            <div class="col-lg-10">
-                                <ul class="list-group">
-                                    {foreach name="vo.options" item="voo" key="kk"}
-                                    <label style="width:100%;"  class="list-group-item">
-                                        <input type="radio" name="{$key}" value="{$voo}"> {$voo}
-                                    </label>
-                                    {/foreach}
-                                </ul>
-                            </div>
+                    </div>
+                    {else /}
+                    {elt name="$vo.options|count" value="4"}
+                    <div class="form-group">
+                        <label style="font-size: 16px;" for="{$key}" class="col-lg-10">
+                            <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*
+                            </font>{$k}.{$vo.title}
+                        </label>
+                        <div class="col-lg-10">
+                            <ul class="list-group">
+                                {foreach name="vo.options" item="voo" key="kk"}
+                                <label style="width:100%;" class="list-group-item">
+                                    <input type="radio" name="{$key}" value="{$voo}"> {$voo}
+                                </label>
+                                {/foreach}
+                            </ul>
                         </div>
-                        {else /}
-                        <div class="form-group">
-                            <label style="font-size: 16px;" for="{$key}" class="col-lg-10">
-                                <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*
-                                </font>{$k}.{$vo.title}
-                            </label>
-                            <div class="col-lg-8">
-                                <select class="form-control" required="true" name="{$key}">
-                                    <option value="">--请选择--</option>
-                                    {volist name="vo.options" id="voo"}
-                                    <option value="{$voo}">{$voo}</option>
-                                    {/volist}
-                                </select>
-                            </div>
+                    </div>
+                    {else /}
+                    <div class="form-group">
+                        <label style="font-size: 16px;" for="{$key}" class="col-lg-10">
+                            <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*
+                            </font>{$k}.{$vo.title}
+                        </label>
+                        <div class="col-lg-8">
+                            <select class="form-control" required="true" name="{$key}">
+                                <option value="">--请选择--</option>
+                                {volist name="vo.options" id="voo"}
+                                <option value="{$voo}">{$voo}</option>
+                                {/volist}
+                            </select>
                         </div>
-                        {/elt}
-                        {/eq}
-                        {/volist}
-                        <div class="form-group">
-                            <input type="button" style="height: 40px;" class="btn btn-info form-control" id="submitOpt"
-                                value="提交">
-                        </div>
-                    </fieldset>
+                    </div>
+                    {/elt}
+                    {/eq}
+                    {/volist}
+                    <div class="form-group">
+                        <input type="button" style="height: 40px;" class="btn btn-info form-control" id="submitOpt"
+                            value="提交">
+                    </div>
                 </form>
                 {/present}
             </div>
