--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <div style="padding: 24px 48px;">
-            {present name="$tname"}
-            <h1>{$thello},感谢您在{$tname}的提交:)</h1>
+            {present name="$content"}
+            <h1>{$content}</h1>
             {else /}
-            <h1>感谢您的提交:)</h1>
+            <h1>Hello&nbsp:)</h1>
             {/present}
         </div>
     </div>
