--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -64,7 +64,7 @@
 <body>
     <div class="container" style="margin-top: 50px;margin-bottom: 50px;">
         <div class="row col-lg-offset-2">
-            <div class="col-lg-8 project-block-background">
+            <div class="col-lg-8 project-block-background" style="padding-bottom:20px;padding-top:20px;">
                 {present name="$info"}
                 <h1>{$info}</h1>
                 {else /}
