--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -20,7 +20,7 @@
                             <tr>
                                 <th>表单名</th>
                                 {if session('admin.is_super')==1} <th>用户名</th>{/if}
-                                <th>记录数</th>
+                                <!-- <th>记录数</th> -->
                                 <th>使用的数据集</th>
                                 <th>状态</th>
                                 <th colspan="3">操作</th>
@@ -33,7 +33,7 @@
                                 <td><a href="{:url('admin/Template/index',['id'=>$vo.tid])}"
                                         style="font-size:14px">{$vo.tname}</a> </td>
                                 {if session('admin.is_super')==1}<td>{$vo.username}</td>{/if}
-                                <td>{$vo.datas_count}</td>
+                                <!-- <td>{$vo.datas_count}</td> -->
                                 <td>{$vo.mydata}</td>
                                 {if $vo.status==1}
                                 <td>
