--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -26,7 +26,7 @@
                     <input type="text" class="form-control" name="username" placeholder="用户名" />
                 </div>
                 <div class="loginbox-textbox">
-                    <input type="password" class="form-control" name="password" placeholder="密码" />
+                    <input type="password" class="form-control" name="password" placeholder="密码" onkeydown='if(event.keyCode==13){$("#login").click()}'/>
                 </div>
                 <!-- <div class="loginbox-forgot">
                     <a href="{:url('admin/Index/forget')}">忘记密码?</a>
@@ -53,8 +53,6 @@
     
     <!-- layer -->
     <script src="__LIB__/layer/layer.js"></script>
-    <!--Beyond Scripts-->
-    <script src="__JS__/beyond.js"></script>
     <script>
 
         $(function() {
