--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -90,7 +90,7 @@
                             </font>{$k}.{$vo.title}
                         </label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control required {$vo.rule}" id="{$key}" name="{$key}">
+                            <input type="text" class="form-control  {$vo.rule}" id="{$key}" name="{$key}">
                         </div>
                     </div>
                     {else /}
